<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/container"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical" tools:context="com.hogee.changemmversion.MainActivity">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/introduce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introduce" />

        <Button
            android:id="@+id/btn_set_smart_install"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/introduce"
            android:text="@string/string_open_smart_install_btn" />

        <Button
            android:id="@+id/btn_install_665"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_set_smart_install"
            android:text="@string/string_btn_install_665" />

        <Button
            android:id="@+id/btn_uninstall_665"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_install_665"
            android:text="@string/string_btn_uninstall_665" />

        <Button
            android:id="@+id/btn_install_653"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_uninstall_665"
            android:text="@string/string_btn_install_653" />

        <Button
            android:id="@+id/btn_uninstall_653"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_install_653"
            android:text="@string/string_btn_uninstall_653" />

    </LinearLayout>

    <android.support.design.widget.BottomNavigationView android:id="@+id/navigation"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_gravity="bottom" android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation" />

</LinearLayout>
